--- a/app/src/main/res/layout/activity_grouplist.xml
+++ b/app/src/main/res/layout/activity_grouplist.xml
@@ -6,19 +6,33 @@
     android:layout_height="match_parent"
     tools:context=".GrouplistActivity">
 
+    <LinearLayout
+        android:id="@+id/title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="54dp"
+        android:layout_marginLeft="16dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent">
+
     <TextView
-        android:id="@+id/mymoim"
+        android:id="@+id/nickname"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="@font/pretendard_medium"
         android:textSize="16sp"
-        android:layout_marginTop="54dp"
-        android:layout_marginLeft="16dp"
-        android:text="나의 모임"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        android:text="닉네임"
         />
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/pretendard_medium"
+        android:textSize="16sp"
+        android:text=" 님의 모임"
+        />
+
+    </LinearLayout>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView"
@@ -28,7 +42,7 @@
         android:layout_marginHorizontal="12dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/mymoim"
+        app:layout_constraintTop_toBottomOf="@+id/title"
         />
 
 
