--- a/app/src/main/res/layout/activity_schedule_setting.xml
+++ b/app/src/main/res/layout/activity_schedule_setting.xml
@@ -14,8 +14,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/back_layout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="#FFFFFF">
+        android:layout_height="match_parent" >
 
         <ImageView
             android:id="@+id/arrowleft"
