--- a/app/src/main/res/layout/activity_ai_result.xml
+++ b/app/src/main/res/layout/activity_ai_result.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
     tools:context=".ai_result">
 
     <ImageButton
@@ -35,9 +36,66 @@
         android:id="@+id/course"
         android:layout_width="match_parent"
         android:layout_height="320dp"
-        android:layout_marginTop="29dp"
         android:layout_marginHorizontal="20dp"
-        app:layout_constraintTop_toBottomOf="@+id/title" />
+        android:layout_marginTop="28dp"
+        app:layout_constraintTop_toBottomOf="@+id/title"
+        tools:layout_editor_absoluteX="20dp" />
+
+    <RadioGroup
+        android:id="@+id/selectCourse"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="40dp"
+        android:layout_marginStart="40dp"
+        android:orientation="horizontal"
+        app:layout_constraintTop_toBottomOf="@id/course"
+        app:layout_constraintStart_toStartOf="parent">
+
+        <RadioButton
+            android:id="@+id/first"
+            android:layout_width="wrap_content"
+            android:layout_height="25dp"
+            android:text="코스1"
+            android:paddingHorizontal="11dp"
+            android:background="@drawable/radio_sector"
+            android:textAlignment="center"
+            android:button="@android:color/transparent"
+            android:textColor="@drawable/radio_text_color"
+            android:fontFamily="@font/pretendard_medium"
+            android:textSize="14sp"
+            />
+
+        <RadioButton
+            android:id="@+id/second"
+            android:layout_width="wrap_content"
+            android:layout_height="25dp"
+            android:text="코스2"
+            android:paddingHorizontal="11dp"
+            android:layout_marginStart="10dp"
+            android:background="@drawable/radio_sector"
+            android:textAlignment="center"
+            android:button="@android:color/transparent"
+            android:textColor="@drawable/radio_text_color"
+            android:fontFamily="@font/pretendard_medium"
+            android:textSize="14sp"
+            />
+
+        <RadioButton
+            android:id="@+id/third"
+            android:layout_width="wrap_content"
+            android:layout_height="25dp"
+            android:text="코스3"
+            android:paddingHorizontal="11dp"
+            android:layout_marginStart="10dp"
+            android:background="@drawable/radio_sector"
+            android:textAlignment="center"
+            android:button="@android:color/transparent"
+            android:textColor="@drawable/radio_text_color"
+            android:fontFamily="@font/pretendard_medium"
+            android:textSize="14sp"
+            />
+
+    </RadioGroup>
 
     <TextView
         android:id="@+id/question"
@@ -46,27 +104,35 @@
         android:fontFamily="@font/pretendard_regular"
         android:text="마음에 드는 장소가 없다면?"
         android:textSize="19sp"
-        android:layout_marginTop="100dp"
         android:layout_marginStart="32dp"
-        app:layout_constraintTop_toBottomOf="@+id/course"
+        android:layout_marginBottom="20dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"/>
 
-    <Button
-        android:id="@+id/morebtn"
-        android:layout_width="match_parent"
+    <ImageButton
+        android:id="@+id/refresh"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:background="@drawable/refresh"
+        android:layout_marginEnd="32dp"
+        android:layout_marginBottom="20dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"/>
+
+    <Button
+        android:id="@+id/select"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
         android:layout_marginHorizontal="32dp"
-        android:layout_marginBottom="72dp"
+        android:layout_marginTop="10dp"
         android:fontFamily="@font/pretendard_bold"
-        android:text="다른 코스 더 추천 받기"
+        android:text="코스 선택하기"
         android:lineHeight="24sp"
         android:textColor="@color/white"
         android:background="@drawable/orangebtn"
-       app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/selectCourse"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-
-
         />
 
 
