--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -5,6 +5,7 @@
     android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
     tools:context=".login">
 
     <ImageView
@@ -43,9 +44,5 @@
         app:layout_constraintTop_toBottomOf="@+id/logo"
         android:textAllCaps="false"
         />
-
-
-
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
