--- a/app/src/main/res/layout/activity_new_group_make.xml
+++ b/app/src/main/res/layout/activity_new_group_make.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
     tools:context=".NewGroupMake">
 
     <ImageView
@@ -170,7 +171,7 @@
         android:fontFamily="@font/pretendard_bold"
         android:layout_marginHorizontal="32dp"
         android:lineHeight="24sp"
-        android:text="그룹 인원 추가하기"
+        android:text="그룹 만들기"
         android:textSize="16sp"
         android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
