--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -2,17 +2,19 @@
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:id="@+id/rectangle6"
-    android:layout_width="328dp"
+    android:layout_width="match_parent"
     android:layout_height="40dp"
     android:layout_alignParentLeft="true"
     android:layout_alignParentTop="true"
     android:elevation="8dp"
+    android:layout_marginBottom="8dp"
     card_view:cardCornerRadius="12dp">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="horizontal"> <!-- 수평 방향 설정 -->
+        android:orientation="horizontal"
+        android:gravity="center_vertical"> <!-- 수평 방향 설정 -->
 
         <TextView
             android:id="@+id/groupname"
