--- a/app/src/main/res/layout/activity_group_setting_leader.xml
+++ b/app/src/main/res/layout/activity_group_setting_leader.xml
@@ -4,8 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#EEEEEE"
-    tools:context=".GroupSetting_normal">
+    android:background="@color/white"
+    tools:context=".GroupSetting_leader">
 
     <ImageView
         android:id="@+id/arrowleft"
@@ -16,54 +16,19 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <RelativeLayout
-        android:id="@+id/profile"
-        android:layout_width="328dp"
-        android:layout_height="62dp"
-        android:layout_marginTop="33dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/arrowleft">
+    <TextView
+        android:id="@+id/title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="설정"
+        android:textSize="20sp"
+        android:fontFamily="@font/pretendard_medium"
+        android:textColor="@color/black"
+        android:layout_marginStart="10dp"
+        android:layout_marginVertical="10dp"
+        app:layout_constraintTop_toTopOf="@+id/arrowleft"
+        app:layout_constraintStart_toEndOf="@+id/arrowleft"/>
 
-        <View
-            android:id="@+id/rectangle_4"
-            android:layout_width="328dp"
-            android:layout_height="62dp"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentTop="true"
-            android:background="@drawable/whitebox"
-
-            />
-
-        <TextView
-            android:id="@+id/nickname"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="27dp"
-            android:layout_marginTop="16dp"
-            android:fontFamily="@font/pretendard_medium"
-            android:text="김수한무거북이와두루미"
-            android:textSize="14sp" />
-
-        <TextView
-            android:id="@+id/addcalender"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="27dp"
-            android:layout_marginTop="33dp"
-            android:fontFamily="@font/pretendard_medium"
-            android:text="시간표 추가하기"
-            android:textColor="#ACACAC"
-            android:textSize="12sp" />
-
-        <ImageButton
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:layout_marginLeft="293dp"
-            android:background="@drawable/settings" />
-
-    </RelativeLayout>
 
     <TextView
         android:layout_width="wrap_content"
@@ -74,7 +39,8 @@
         android:fontFamily="@font/pretendard_semibold"
         android:textSize="14sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/profile" />
+        app:layout_constraintTop_toBottomOf="@id/title"
+         />
 
 "
 
@@ -87,13 +53,13 @@
         android:background="@drawable/edge"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/profile">
+        app:layout_constraintTop_toBottomOf="@+id/title">
 
-        <TextView
+        <Button
             android:id="@+id/addMemberText"
             android:layout_width="match_parent"
             android:layout_height="60dp"
-            android:background="#FFFFFF"
+            android:background="?attr/selectableItemBackground"
             android:gravity="center_vertical"
             android:paddingLeft="30dp"
             android:fontFamily="@font/pretendard_medium"
@@ -108,22 +74,22 @@
         android:layout_width="wrap_content"
         android:layout_height="60dp"
         android:background="@drawable/edge"
-        android:layout_marginTop="1dp"
+        android:layout_marginTop="-2dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/addMember">
 
-        <TextView
+        <Button
             android:id="@+id/exitMemberText"
             android:layout_width="match_parent"
             android:layout_height="60dp"
-            android:background="#FFFFFF"
+            android:background="?attr/selectableItemBackground"
+            android:fontFamily="@font/pretendard_medium"
             android:gravity="center_vertical"
             android:paddingLeft="30dp"
-            android:fontFamily="@font/pretendard_medium"
             android:text="멤버 내보내기"
             android:textColor="#000000"
-            android:textSize="17sp"/>
+            android:textSize="17sp" />
 
     </RelativeLayout>
 
@@ -149,12 +115,11 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/settingGroup">
 
-        <TextView
+        <Button
             android:id="@+id/exitGroupText"
             android:layout_width="match_parent"
             android:layout_height="60dp"
-            android:background="#FFFFFF"
-            android:gravity="center_vertical"
+            android:background="?attr/selectableItemBackground"            android:gravity="center_vertical"
             android:paddingLeft="30dp"
             android:fontFamily="@font/pretendard_medium"
             android:text="모임 나가기"
@@ -167,17 +132,16 @@
         android:layout_width="wrap_content"
         android:layout_height="60dp"
         android:background="@drawable/edge"
-        android:layout_marginTop="1dp"
+        android:layout_marginTop="-2dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/exitGroup">
 
-        <TextView
+        <Button
             android:id="@+id/removeGroupText"
             android:layout_width="match_parent"
             android:layout_height="60dp"
-            android:background="#FFFFFF"
-            android:gravity="center_vertical"
+            android:background="?attr/selectableItemBackground"            android:gravity="center_vertical"
             android:paddingLeft="30dp"
             android:fontFamily="@font/pretendard_medium"
             android:text="모임 없애기"
