--- a/app/src/main/res/layout/activity_grouphome.xml
+++ b/app/src/main/res/layout/activity_grouphome.xml
@@ -21,7 +21,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/settings"
         android:layout_width="37dp"
         android:layout_height="38dp"
         android:layout_marginTop="24dp"
