--- a/app/src/main/res/layout/activity_middleplace.xml
+++ b/app/src/main/res/layout/activity_middleplace.xml
@@ -37,7 +37,7 @@
         android:layout_height="400dp"
         android:layout_width="match_parent"
         android:id="@+id/drawer"
-        android:background="@color/white">
+        android:background="@drawable/rectangle_2">
 
         <TextView
             android:id="@+id/title"
