--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -11,6 +11,7 @@
     card_view:cardCornerRadius="12dp">
 
     <LinearLayout
+        android:background="?attr/selectableItemBackground"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="horizontal"
