--- a/app/src/main/res/layout/activity_edit_place.xml
+++ b/app/src/main/res/layout/activity_edit_place.xml
@@ -9,7 +9,9 @@
     tools:context=".Grouphome"
     android:gravity="bottom"
     app:umanoDragView="@id/slide_layout"
-    app:umanoOverlay="true">
+    app:umanoOverlay="true"
+    app:umanoPanelHeight="0dp"
+    app:umanoAnchorPoint="0.5">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/back_layout"
@@ -137,12 +139,14 @@
             app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />
 
 
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/slide_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -169,16 +173,17 @@
                 android:layout_marginBottom="10dp"
                 android:orientation="horizontal">
 
-                <Button
-                    android:id="@+id/editButton3"
+                <EditText
+                    android:id="@+id/editTextText2"
                     android:layout_width="270dp"
                     android:layout_height="match_parent"
                     android:layout_marginRight="20dp"
                     android:background="@drawable/rectangle_4_1"
                     android:drawableEnd="@drawable/close"
-                    android:gravity="left|center_vertical"
-                    android:text="출발하는 곳이 어디인가요?"
-                    android:textColor="#919191" />
+                    android:ems="10"
+                    android:hint="출발하는 곳이 어디인가요?"
+                    android:inputType="text" />
+
 
                 <Button
                     android:id="@+id/editButton4"
