--- a/app/src/main/res/layout/activity_grouphome.xml
+++ b/app/src/main/res/layout/activity_grouphome.xml
@@ -44,7 +44,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/button6"
+        android:id="@+id/editschedulebutton"
         android:layout_width="346dp"
         android:layout_height="35dp"
         android:layout_marginTop="40dp"
