--- a/app/src/main/res/layout/activity_edit_place.xml
+++ b/app/src/main/res/layout/activity_edit_place.xml
@@ -65,9 +65,9 @@
                 android:layout_height="match_parent"
                 android:layout_marginLeft="20dp"
                 android:background="@drawable/button_border"
+                android:gravity="left|center_vertical"
                 android:text="출발지를 입력하세요"
-                android:textColor="#919191"
-                android:gravity="left|center_vertical"/>
+                android:textColor="#919191" />
 
             <ImageButton
                 android:id="@+id/imageView_trans1"
@@ -177,7 +177,7 @@
                     android:background="@drawable/rectangle_4_1"
                     android:drawableEnd="@drawable/close"
                     android:gravity="left|center_vertical"
-                    android:text="출발하는 곳이 어디인가요?"
+                    android:hint="출발하는 곳이 어디인가요?"
                     android:textColor="#919191" />
 
                 <Button
