--- a/app/src/main/res/layout/activity_grouphome.xml
+++ b/app/src/main/res/layout/activity_grouphome.xml
@@ -34,12 +34,12 @@
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="84dp"
         android:layout_marginTop="24dp"
         android:text="8반 찐따 모임"
         android:textColor="#000000"
         android:textSize="20sp"
         android:textStyle="bold"
-        app:layout_constraintEnd_toStartOf="@+id/imageView"
         app:layout_constraintStart_toEndOf="@+id/arrowleft"
         app:layout_constraintTop_toTopOf="parent" />
 
