--- a/app/src/main/res/layout/activity_edit_place.xml
+++ b/app/src/main/res/layout/activity_edit_place.xml
@@ -128,16 +128,17 @@
             android:id="@+id/resultbutton"
             android:layout_width="346dp"
             android:layout_height="36dp"
-            android:layout_marginTop="464dp"
+            android:layout_marginTop="435dp"
             android:layout_marginBottom="24dp"
             android:background="@drawable/round_button"
             android:text="시간 추천 확인하기"
             android:textColor="#FFFFFF"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.523"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />
-
+            app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
+            app:layout_constraintVertical_bias="0.0" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
@@ -232,7 +233,7 @@
             </LinearLayout>
 
             <Button
-                android:id="@+id/button"
+                android:id="@+id/savebutton"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="20dp"
