--- a/app/src/main/res/layout/activity_time_result.xml
+++ b/app/src/main/res/layout/activity_time_result.xml
@@ -73,11 +73,10 @@
     </FrameLayout>
 
     <Button
-        android:id="@+id/resultbutton4"
+        android:id="@+id/resultbutton"
         android:layout_width="346dp"
         android:layout_height="36dp"
         android:layout_gravity="center"
-        android:layout_marginTop="10dp"
         android:background="@drawable/round_button"
         android:text="중간장소 확인하기"
         android:textColor="#FFFFFF" />
