--- a/app/src/main/res/layout/activity_grouphome.xml
+++ b/app/src/main/res/layout/activity_grouphome.xml
@@ -31,7 +31,7 @@
         app:srcCompat="@drawable/settings" />
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/grouptitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="84dp"
@@ -53,7 +53,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.446"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView" />
+        app:layout_constraintTop_toBottomOf="@+id/grouptitle" />
 
     <Button
         android:id="@+id/resultbutton4"
