--- a/app/src/main/res/layout/activity_schedule_setting.xml
+++ b/app/src/main/res/layout/activity_schedule_setting.xml
@@ -184,7 +184,7 @@
                     android:textSize="20sp" />
 
                 <EditText
-                    android:id="@+id/editTextDate1"
+                    android:id="@+id/startyearinput"
                     android:layout_width="80dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
@@ -193,7 +193,7 @@
                     android:inputType="date" />
 
                 <EditText
-                    android:id="@+id/editTextTime2"
+                    android:id="@+id/starthourinput"
                     android:layout_width="80dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
@@ -218,7 +218,7 @@
                     android:textSize="20sp" />
 
                 <EditText
-                    android:id="@+id/editTextDate3"
+                    android:id="@+id/endyearinput"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
@@ -227,7 +227,7 @@
                     android:inputType="text" />
 
                 <EditText
-                    android:id="@+id/editTextTime4"
+                    android:id="@+id/endhourinput"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
