--- a/app/src/main/res/layout/fragment_1p.xml
+++ b/app/src/main/res/layout/fragment_1p.xml
@@ -4,19 +4,16 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <!-- 요일을 표시하는 헤더 레이아웃 -->
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
 
-        <!-- 공백 셀 -->
         <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1" />
 
-        <!-- 요일 표시 셀 -->
         <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -117,13 +114,6 @@
             android:layout_height="0dp"
             android:layout_weight="1"
             android:gravity="center"
-            android:text="11" />
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"
-            android:gravity="center"
             android:text="5" />
 
         <TextView
@@ -166,6 +156,6 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_view"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="match_parent" />
 
 </LinearLayout>
