--- a/app/src/main/res/layout/activity_edit_place.xml
+++ b/app/src/main/res/layout/activity_edit_place.xml
@@ -43,102 +43,28 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.041" />
 
-        <LinearLayout
-            android:id="@+id/linearLayout2"
-            android:layout_width="348dp"
-            android:layout_height="40dp"
-            android:layout_marginTop="32dp"
-            android:orientation="horizontal"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tv_text1">
-
-            <TextView
-                android:id="@+id/name_text1"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="홍길동"
-                android:textColor="@color/black"
-                android:textSize="16sp" />
-
-            <Button
-                android:id="@+id/editButton1"
-                android:layout_width="200dp"
-                android:layout_height="match_parent"
-                android:layout_marginLeft="20dp"
-                android:background="@drawable/button_border"
-                android:text="출발지를 입력하세요"
-                android:textColor="#919191"
-                android:gravity="left|center_vertical"/>
-
-            <ImageButton
-                android:id="@+id/imageView_trans1"
-                android:layout_width="40dp"
-                android:layout_height="match_parent"
-                android:layout_marginLeft="20dp"
-                android:background="@drawable/gray_border"
-                android:gravity="center"
-                android:padding="5dp"
-                android:scaleType="fitCenter"
-                android:src="@drawable/car_orange" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:id="@+id/linearLayout3"
-            android:layout_width="347dp"
-            android:layout_height="40dp"
-            android:layout_marginTop="8dp"
-            android:orientation="horizontal"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/linearLayout2">
-
-            <TextView
-                android:id="@+id/name_text2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="김철수"
-                android:textColor="@color/black"
-                android:textSize="16sp" />
-
-            <Button
-                android:id="@+id/editButton2"
-                android:layout_width="200dp"
-                android:layout_height="match_parent"
-                android:layout_marginLeft="20dp"
-                android:background="@drawable/button_border"
-                android:gravity="left|center_vertical"
-                android:text="출발지를 입력하세요"
-                android:textColor="#919191" />
-
-            <ImageButton
-                android:id="@+id/imageView_trans2"
-                android:layout_width="40dp"
-                android:layout_height="match_parent"
-                android:layout_marginLeft="20dp"
-                android:background="@drawable/gray_border"
-                android:gravity="center"
-                android:padding="5dp"
-                android:scaleType="fitCenter"
-                android:src="@drawable/car_orange" />
-
-        </LinearLayout>
+       <androidx.recyclerview.widget.RecyclerView
+           android:id="@+id/recyclerView"
+           android:layout_width="wrap_content"
+           android:layout_height="wrap_content"
+           android:layout_marginTop="32dp"
+           app:layout_constraintTop_toBottomOf="@id/tv_text1"
+           app:layout_constraintStart_toStartOf="parent"
+           app:layout_constraintEnd_toEndOf="parent"/>
 
         <Button
             android:id="@+id/resultbutton"
             android:layout_width="346dp"
             android:layout_height="36dp"
-            android:layout_marginTop="435dp"
             android:layout_marginBottom="24dp"
             android:background="@drawable/round_button"
             android:text="시간 추천 확인하기"
             android:textColor="#FFFFFF"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.523"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
-            app:layout_constraintVertical_bias="0.0" />
+
+             />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
