--- a/app/src/main/res/layout/activity_middleplace.xml
+++ b/app/src/main/res/layout/activity_middleplace.xml
@@ -28,7 +28,9 @@
             android:id="@+id/map_fragment"
             android:name="com.naver.maps.map.MapFragment"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="match_parent"
+            tools:layout_editor_absoluteX="0dp"
+            tools:layout_editor_absoluteY="-76dp" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
