--- a/app/src/main/res/layout/place_item.xml
+++ b/app/src/main/res/layout/place_item.xml
@@ -17,7 +17,7 @@
         android:textColor="@color/black"
         android:textSize="16sp" />
 
-    <Button
+    <EditText
         android:id="@+id/inputbtn"
         android:layout_width="200dp"
         android:layout_height="match_parent"
@@ -26,7 +26,7 @@
         android:gravity="left|center_vertical"
         android:onClick="onInputButtonClick"
         android:paddingStart="10dp"
-        android:text="출발지를 입력하세요"
+        android:hint="출발지를 입력하세요"
         android:textColor="#919191" />
 
     <ImageButton
