--- a/app/src/main/res/layout/activity_schedule_setting.xml
+++ b/app/src/main/res/layout/activity_schedule_setting.xml
@@ -17,7 +17,8 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/back_layout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:background="#FFFFFF">
 
         <ImageView
             android:id="@+id/arrowleft"
