--- a/app/src/main/res/layout/activity_ai_result.xml
+++ b/app/src/main/res/layout/activity_ai_result.xml
@@ -36,19 +36,19 @@
 
     <LinearLayout
         android:id="@+id/course"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="46dp"
         android:orientation="vertical"
-
+        android:paddingHorizontal="30dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/title">
 
         <RelativeLayout
             android:id="@+id/place1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:background="@drawable/courseview"
             android:gravity="center_horizontal"
 
@@ -57,16 +57,17 @@
             app:layout_constraintTop_toTopOf="parent">
 
             <LinearLayout
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_centerInParent="true"
                 android:orientation="vertical">
 
                 <TextView
                     android:id="@+id/restaurantname"
-                    android:layout_width="234dp"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginHorizontal="22dp"
+                    android:layout_marginTop="10dp"
                     android:fontFamily="@font/pretendard_bold"
                     android:lineHeight="19sp"
                     android:text="장소1"
@@ -75,9 +76,10 @@
 
                 <TextView
                     android:id="@+id/restaddress"
-                    android:layout_width="234dp"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginHorizontal="22dp"
+                    android:layout_marginTop="5dp"
                     android:fontFamily="@font/pretendard_regular"
                     android:text="중간 장소로부터 거리"
                     android:textColor="#565656"
@@ -85,9 +87,10 @@
 
                 <TextView
                     android:id="@+id/restphone"
-                    android:layout_width="234dp"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginHorizontal="22dp"
+                    android:layout_marginTop="5dp"
                     android:fontFamily="@font/pretendard_regular"
                     android:text="상세 주소"
                     android:textColor="#565656"
@@ -95,9 +98,11 @@
 
                 <TextView
                     android:id="@+id/resthash"
-                    android:layout_width="234dp"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginHorizontal="22dp"
+                    android:layout_marginTop="5dp"
+                    android:layout_marginBottom="10dp"
                     android:fontFamily="@font/pretendard_regular"
                     android:text="해시태그"
                     android:textColor="@color/main"
@@ -109,7 +114,7 @@
 
         <RelativeLayout
             android:id="@+id/place2"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="14dp"
             android:background="@drawable/courseview"
@@ -119,16 +124,17 @@
             app:layout_constraintTop_toBottomOf="@+id/place1">
 
             <LinearLayout
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_centerInParent="true"
                 android:orientation="vertical">
 
                 <TextView
                     android:id="@+id/cafeplace"
-                    android:layout_width="234dp"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginHorizontal="22dp"
+                    android:layout_marginTop="10dp"
                     android:fontFamily="@font/pretendard_bold"
                     android:lineHeight="19sp"
                     android:text="장소1"
@@ -137,9 +143,10 @@
 
                 <TextView
                     android:id="@+id/cafeaddress"
-                    android:layout_width="234dp"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginHorizontal="22dp"
+                    android:layout_marginTop="5dp"
                     android:fontFamily="@font/pretendard_regular"
                     android:text="중간 장소로부터 거리"
                     android:textColor="#565656"
@@ -147,9 +154,10 @@
 
                 <TextView
                     android:id="@+id/cafephone"
-                    android:layout_width="234dp"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginHorizontal="22dp"
+                    android:layout_marginTop="5dp"
                     android:fontFamily="@font/pretendard_regular"
                     android:text="상세 주소"
                     android:textColor="#565656"
@@ -157,9 +165,11 @@
 
                 <TextView
                     android:id="@+id/cafehash"
-                    android:layout_width="234dp"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginHorizontal="22dp"
+                    android:layout_marginTop="5dp"
+                    android:layout_marginBottom="10dp"
                     android:fontFamily="@font/pretendard_regular"
                     android:text="해시태그"
                     android:textColor="@color/main"
@@ -171,7 +181,7 @@
 
         <RelativeLayout
             android:id="@+id/place3"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="14dp"
             android:background="@drawable/courseview"
@@ -181,16 +191,17 @@
             app:layout_constraintTop_toBottomOf="@+id/place2">
 
             <LinearLayout
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_centerInParent="true"
                 android:orientation="vertical">
 
                 <TextView
                     android:id="@+id/drinkname"
-                    android:layout_width="234dp"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginHorizontal="22dp"
+                    android:layout_marginTop="10dp"
                     android:fontFamily="@font/pretendard_bold"
                     android:lineHeight="19sp"
                     android:text="장소1"
@@ -199,9 +210,10 @@
 
                 <TextView
                     android:id="@+id/drinkaddress"
-                    android:layout_width="234dp"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginHorizontal="22dp"
+                    android:layout_marginTop="5dp"
                     android:fontFamily="@font/pretendard_regular"
                     android:text="중간 장소로부터 거리"
                     android:textColor="#565656"
@@ -209,9 +221,10 @@
 
                 <TextView
                     android:id="@+id/drinkphone"
-                    android:layout_width="234dp"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginHorizontal="22dp"
+                    android:layout_marginTop="5dp"
                     android:fontFamily="@font/pretendard_regular"
                     android:text="상세 주소"
                     android:textColor="#565656"
@@ -219,9 +232,11 @@
 
                 <TextView
                     android:id="@+id/drinkhash"
-                    android:layout_width="234dp"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginHorizontal="22dp"
+                    android:layout_marginTop="5dp"
+                    android:layout_marginBottom="10dp"
                     android:fontFamily="@font/pretendard_regular"
                     android:text="해시태그"
                     android:textColor="@color/main"
