--- a/app/src/main/res/layout/activity_moim_result.xml
+++ b/app/src/main/res/layout/activity_moim_result.xml
@@ -122,26 +122,27 @@
 
     <RelativeLayout
         android:id="@+id/place1"
-        android:layout_width="279dp"
+        android:layout_width="match_parent"
         android:layout_height="97dp"
         android:background="@drawable/courseview"
         android:gravity="center_horizontal"
         android:layout_marginTop="30dp"
-        android:layout_marginHorizontal="20dp"
+        android:layout_marginHorizontal="35dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/title4">
 
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
             android:orientation="vertical">
 
             <TextView
                 android:id="@+id/restaurantname"
-                android:layout_width="234dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
                 android:layout_marginHorizontal="22dp"
                 android:fontFamily="@font/pretendard_bold"
                 android:lineHeight="19sp"
@@ -151,9 +152,10 @@
 
             <TextView
                 android:id="@+id/restaddress"
-                android:layout_width="234dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="22dp"
+                android:layout_marginTop="3dp"
                 android:fontFamily="@font/pretendard_regular"
                 android:text="중간 장소로부터 거리"
                 android:textColor="#565656"
@@ -161,18 +163,20 @@
 
             <TextView
                 android:id="@+id/restphone"
-                android:layout_width="234dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="22dp"
                 android:fontFamily="@font/pretendard_regular"
                 android:text="상세 주소"
+                android:layout_marginTop="3dp"
                 android:textColor="#565656"
                 android:textSize="10sp" />
 
             <TextView
                 android:id="@+id/resthash"
-                android:layout_width="234dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginBottom="10dp"
                 android:layout_marginHorizontal="22dp"
                 android:fontFamily="@font/pretendard_regular"
                 android:text="해시태그"
@@ -185,26 +189,29 @@
 
     <RelativeLayout
         android:id="@+id/place2"
-        android:layout_width="279dp"
+        android:layout_width="match_parent"
         android:layout_height="97dp"
         android:background="@drawable/courseview"
         android:gravity="center_horizontal"
+        android:layout_marginHorizontal="35dp"
+
         android:layout_marginTop="14dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/place1">
 
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
             android:orientation="vertical">
 
             <TextView
                 android:id="@+id/cafeplace"
-                android:layout_width="234dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="22dp"
+                android:layout_marginTop="10dp"
                 android:fontFamily="@font/pretendard_bold"
                 android:lineHeight="19sp"
                 android:text="장소1"
@@ -213,9 +220,10 @@
 
             <TextView
                 android:id="@+id/cafeaddress"
-                android:layout_width="234dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="22dp"
+                android:layout_marginTop="3dp"
                 android:fontFamily="@font/pretendard_regular"
                 android:text="중간 장소로부터 거리"
                 android:textColor="#565656"
@@ -223,19 +231,21 @@
 
             <TextView
                 android:id="@+id/cafephone"
-                android:layout_width="234dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="22dp"
                 android:fontFamily="@font/pretendard_regular"
                 android:text="상세 주소"
                 android:textColor="#565656"
+                android:layout_marginTop="3dp"
                 android:textSize="10sp" />
 
             <TextView
                 android:id="@+id/cafehash"
-                android:layout_width="234dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="22dp"
+                android:layout_marginBottom="10dp"
                 android:fontFamily="@font/pretendard_regular"
                 android:textColor="@color/main"
                 android:text="해시태그"
@@ -248,7 +258,9 @@
 
     <RelativeLayout
         android:id="@+id/place3"
-        android:layout_width="279dp"
+        android:layout_width="match_parent"
+        android:layout_marginHorizontal="35dp"
+
         android:layout_height="97dp"
         android:background="@drawable/courseview"
         android:layout_marginTop="14dp"
@@ -257,16 +269,17 @@
         app:layout_constraintTop_toBottomOf="@+id/place2">
 
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
             android:orientation="vertical">
 
             <TextView
                 android:id="@+id/drinkname"
-                android:layout_width="234dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="22dp"
+                android:layout_marginTop="10dp"
                 android:fontFamily="@font/pretendard_bold"
                 android:lineHeight="19sp"
                 android:text="장소1"
@@ -275,9 +288,10 @@
 
             <TextView
                 android:id="@+id/drinkaddress"
-                android:layout_width="234dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="22dp"
+                android:layout_marginTop="3dp"
                 android:fontFamily="@font/pretendard_regular"
                 android:text="중간 장소로부터 거리"
                 android:textColor="#565656"
@@ -285,9 +299,10 @@
 
             <TextView
                 android:id="@+id/drinkphone"
-                android:layout_width="234dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="22dp"
+                android:layout_marginTop="3dp"
                 android:fontFamily="@font/pretendard_regular"
                 android:text="상세 주소"
                 android:textColor="#565656"
@@ -295,14 +310,15 @@
 
             <TextView
                 android:id="@+id/drinkhash"
-                android:layout_width="234dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="22dp"
+                android:layout_marginTop="3dp"
+                android:layout_marginBottom="10dp"
                 android:fontFamily="@font/pretendard_regular"
-                android:textColor="@color/main"
                 android:text="해시태그"
-                android:textSize="12sp"
-                />
+                android:textColor="@color/main"
+                android:textSize="12sp" />
 
         </LinearLayout>
 
